galley/pkg/config/analysis/analyzers/testdata/virtualservice_gateway_not_declared_tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: good-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - test.com
      port:
        name: http
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-tls
spec:
  hosts:
    - test.com
  gateways:
    - good-gateway
  tls:
    - match:
      - gateways:
        - bad-gateway
      route:
        - destination:
            host: something
            port:
              number: 1234
